light mode and terraform syntax

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -63,7 +63,7 @@ lines=50000
 
 [cursor]
 # style=block
-# color=<inverse foreground/background>
+color=fbf1c7 665c54 
 # blink=no
 # beam-thickness=1.5
 # underline-thickness=<font underline thickness>
@@ -107,40 +107,79 @@ lines=50000
 #dim6=4d7770   # dim cyan
 #dim7=8e8e8e   # dim white
 
-# Gruvbox
+# Gruvbox dark
+#[colors]
+## Base colors
+#background=282828
+#
+## prompt text
+#foreground=ebdbb2 
+#
+## Regular colors (0-7)
+#regular0=1d2021    # black (slightly lighter than background)
+#regular1=ea6962    # red
+#regular2=a9b665    # green
+#regular3=d8a657    # yellow
+#regular4=7daea3    # blue
+#regular5=d3869b    # magenta
+#regular6=89b482    # cyan
+#regular7=d5c4a1    # white
+#
+## Bright colors (8-15)
+#bright0=928374     # bright black
+#bright1=fb4934     # bright red
+#bright2=b8bb26     # bright green
+#bright3=fabd2f     # bright yellow
+#bright4=83a598     # bright blue
+#bright5=d3869b     # bright magenta
+#bright6=8ec07c     # bright cyan
+#bright7=ebdbb2     # bright white
+#
+## Dim colors (calculated at ~65% brightness)
+#dim0=1d2021        # dim black
+#dim1=c14a4a        # dim red
+#dim2=6f7742        # dim green
+#dim3=a17e4d        # dim yellow
+#dim4=4f7276        # dim blue
+#dim5=9c6377        # dim magenta
+#dim6=577459        # dim cyan
+#dim7=a89984        # dim white
+
+# Gruvbox light
 [colors]
 # Base colors
-background=282828
+background=fbf1c7
 
 # prompt text
-foreground=ebdbb2 
+foreground=3c3836
 
 # Regular colors (0-7)
-regular0=1d2021    # black (slightly lighter than background)
-regular1=ea6962    # red
-regular2=a9b665    # green
-regular3=d8a657    # yellow
-regular4=7daea3    # blue
-regular5=d3869b    # magenta
-regular6=89b482    # cyan
-regular7=d5c4a1    # white
+regular0=e0cfa0    # black (soft crust)
+regular1=b83229    # red
+regular2=7c7b20    # green
+regular3=b57e22    # yellow
+regular4=1a7088    # blue
+regular5=8f3f71    # magenta
+regular6=4a8568    # cyan
+regular7=928374    # white
 
 # Bright colors (8-15)
-bright0=928374     # bright black
-bright1=fb4934     # bright red
-bright2=b8bb26     # bright green
-bright3=fabd2f     # bright yellow
-bright4=83a598     # bright blue
-bright5=d3869b     # bright magenta
-bright6=8ec07c     # bright cyan
-bright7=ebdbb2     # bright white
+bright0=a89984     # bright black
+bright1=cc241d     # bright red
+bright2=98971a     # bright green
+bright3=d79921     # bright yellow
+bright4=458588     # bright blue
+bright5=b16286     # bright magenta
+bright6=689d6a     # bright cyan
+bright7=3c3836     # bright white
 
 # Dim colors (calculated at ~65% brightness)
-dim0=1d2021        # dim black
-dim1=c14a4a        # dim red
-dim2=6f7742        # dim green
-dim3=a17e4d        # dim yellow
-dim4=4f7276        # dim blue
-dim5=9c6377        # dim magenta
-dim6=577459        # dim cyan
-dim7=a89984        # dim white
+dim0=e9dbb1        # dim black (mantle)
+dim1=9a3a34        # dim red
+dim2=6e6b33        # dim green
+dim3=9f7930        # dim yellow
+dim4=3d6d78        # dim blue
+dim5=775063        # dim magenta
+dim6=3f6b57        # dim cyan
+dim7=7c6f64        # dim white
+
