--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -168,6 +168,7 @@ set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'catppuccin/tmux'
 #set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 set -g @plugin 'z3z1ma/tmux-gruvbox'
+set -g @gruvbox_flavour 'light'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 #set -g @continuum-restore 'on'
@@ -202,19 +203,18 @@ run  '~/.config/tmux/plugins/tpm/tpm'
 #set -g pane-active-border fg="#313244"
 #set -g status-bg "#181825"
 
-# Gruvbox
-set -g pane-border-style fg="#3c3836"        # Gruvbox dark1
-set -g pane-active-border fg="#3c3836"       # Gruvbox dark1
-set -g status-bg "#1d2021"                   # Gruvbox dark0_hard
-
+# Gruvbox (Latte Adaptation)
+set -g pane-border-style fg="#ebdbb2"        # Latte text
+set -g pane-active-border fg="#ebdbb2"       # Latte text
+set -g status-bg "#e9dbb1"                   # Latte mantle
 
 #set -g mode-style "fg=black,bg=#f4b8e4"
 
 # For the pane highlight on focus (used in the if-shell command)
-set-hook -g after-select-pane "if-shell -F '#{==:#{window_panes},1}' '' 'selectp -P bg=#32302f; run \"sleep 0.1\"; selectp -P bg=default'"
+set-hook -g after-select-pane "if-shell -F '#{==:#{window_panes},1}' '' 'selectp -P bg=#f2e5bc; run \"sleep 0.1\"; selectp -P bg=default'"
 
 # Style command prompt / dialogs 
-set -g message-style 'bg=#282828 fg=default' # Gruvbox dark0_hard
+set -g message-style 'bg=#fbf1c7 fg=default' # Latte base
 
 # Change color of selected text 
 set -g mode-style "reverse"
@@ -242,4 +242,3 @@ set-hook -g -t buffer client-attached "run-shell $HOME/.config/tmux/create-buffe
 #set -g status-left-length 90
 #set -g status-right-length 90
 #set -g status-justify centre
-
