--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -234,6 +234,18 @@ set-hook -g client-detached "run-shell $HOME/.config/tmux/kill-dangling-sessions
 set-hook -g -t buffer client-attached "run-shell $HOME/.config/tmux/create-buffer-shell.sh"
 #set-hook -g  session-created "run-shell $HOME/.config/tmux/create-buffer-shell.sh"
 
+# Gruvbox Light custom darker backgrounds
+set -g @thm_blue '#076678'
+set -g @thm_orange '#af3a03'
+
+# Unfocused window
+set -g window-status-format "#[bg=#ebdbb2,fg=#076678]#[bg=#076678,fg=#f2e5bc] #I #[bg=#ebdbb2,fg=#076678] #{b:pane_current_path} "
+
+# Focused window
+set -g window-status-current-format "#[bg=#e0cfa9,fg=#af3a03]#[bg=#af3a03,fg=#f2e5bc] #I #[bg=#e0cfa9,fg=#af3a03] #{b:pane_current_path} "
+
+
+
 
 # set -g detach-on-destroy on
 # tmux set -g detach-on-destroy on
