niri and rofi light theme

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -238,11 +238,9 @@ set-hook -g -t buffer client-attached "run-shell $HOME/.config/tmux/create-buffe
 set -g @thm_blue '#076678'
 set -g @thm_orange '#af3a03'
 
-# Unfocused window
-set -g window-status-format "#[bg=#ebdbb2,fg=#076678]#[bg=#076678,fg=#f2e5bc] #I #[bg=#ebdbb2,fg=#076678] #{b:pane_current_path} "
+set -g window-status-format "#[bg=#ebdbb2,fg=#076678]#[bg=#076678,fg=#f2e5bc] #I #[bg=#ebdbb2,fg=#076678] #W "
+set -g window-status-current-format "#[bg=#e0cfa9,fg=#af3a03]#[bg=#af3a03,fg=#f2e5bc] #I #[bg=#e0cfa9,fg=#af3a03] #W "
 
-# Focused window
-set -g window-status-current-format "#[bg=#e0cfa9,fg=#af3a03]#[bg=#af3a03,fg=#f2e5bc] #I #[bg=#e0cfa9,fg=#af3a03] #{b:pane_current_path} "
 
 
 
