--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -9,6 +9,7 @@
 # locked-title=no
 
 font=JetBrainsMono Nerd Font Mono:size=10
+#font=Departure Mono:size=16
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -64,6 +65,7 @@ lines=50000
 [cursor]
 # style=block
 color=fbf1c7 665c54 
+#color=fbf1c7 665c54 
 # blink=no
 # beam-thickness=1.5
 # underline-thickness=<font underline thickness>
