--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -13,15 +13,18 @@ font=JetBrainsMono Nerd Font Mono:size=10
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
-# font-size-adjustment=0.5
-# line-height=<font metrics>
+
+# How much does the zoom increase
+font-size-adjustment=0.25
+
+#line-height=<font metrics>
 # letter-spacing=0
 # horizontal-letter-offset=0
 # vertical-letter-offset=0
 # underline-offset=<font metrics>
 # underline-thickness=<font underline thickness>
 # box-drawings-uses-font-glyphs=no
-# dpi-aware=no
+#dpi-aware=yes
 
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
