--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -37,7 +37,7 @@ pad=3x3
 
 # bold-text-in-bright=no
 # word-delimiters=,│`|:"'()[]{}<>
-# selection-target=primary
+selection-target=both
 # workers=<number of logical CPUs>
 # utmp-helper=/usr/lib/utempter/utempter  # When utmp backend is ‘libutempter’ (Linux)
 # utmp-helper=/usr/libexec/ulog-helper    # When utmp backend is ‘ulog’ (FreeBSD)
