--- a/sioyek/.config/sioyek/prefs_user.config
+++ b/sioyek/.config/sioyek/prefs_user.config
@@ -1,10 +1,19 @@
 should_launch_new_window 1
-dark_mode_background_color 0.118 0.118 0.18
-custom_background_color              0.118 0.118 0.18
-custom_text_color                    0.8 0.8 0.8
-status_bar_color        #11111b
-status_bar_text_color   1 1 1
-status_bar_font_size    16
 
 startup_commands toggle_custom_color
+
+
+page_separator_width 20
+page_separator_color 0.29 0.25 0.21
+
+custom_background_color    0.98 0.91 0.71     
+custom_text_color          0.29 0.25 0.21     
+
+status_bar_color           #d5c4a1           
+status_bar_text_color      0.29 0.25 0.21    
+status_bar_font_size       16
+
+new_command  _dual_panel python3 /home/drusk/.config/sioyek/scripts/dual_panel.py "%{sioyek_path}" "%{file_path}" "%{command_text}"
+
+new_command _test_command echo "%{file_path}" > /tmp/test_output.txt
 
