vicinae, foot and niri

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -67,7 +67,7 @@ lines=50000
 
 [cursor]
 # style=block
-color=fbf1c7 665c54 
+#color=fbf1c7 665c54 
 #color=fbf1c7 665c54 
 # blink=no
 # beam-thickness=1.5
@@ -152,6 +152,7 @@ color=fbf1c7 665c54
 
 # Gruvbox light
 [colors]
+cursor=fbf1c7 665c54 
 # Base colors
 background=fbf1c7
 
