--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -169,9 +169,16 @@ set -g @plugin 'tmux-plugins/tpm'
 #set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 set -g @plugin 'z3z1ma/tmux-gruvbox'
 set -g @gruvbox_flavour 'light'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
 #set -g @continuum-restore 'on'
+set -g @plugin 'tmux-plugins/tmux-open'
+
+#set -g @open 'x'
+#set -g @open 'M-x'
+unbind x
+set -g @open-editor 'x'
+
 
 
 # Set background for the status bar
