--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -13,9 +13,13 @@ setw -g aggressive-resize on
 # Fix vim background color
 #set -g terminal-overrides ',xterm-256color:Tc'
 #set -as terminal-overrides ',xterm*:sitm=\E[3m'
-set -g default-terminal "xterm-256color"
-set -g default-terminal "xterm-256color"
-set -ag terminal-overrides ",xterm-256color:Tc"
+#set -g default-terminal "xterm-256color"
+#set -g default-terminal "xterm-256color"
+#set -ag terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",*:smcup@:rmcup@"
+set -g default-terminal "tmux-256color"
+
+
 
 
 # Fix Esc-j and Esc-k swap lines 
@@ -225,6 +229,8 @@ set -g message-style 'bg=#fbf1c7 fg=default' # Latte base
 
 # Change color of selected text 
 set -g mode-style "reverse"
+#set -wg copy-mode-selection-style "reverse"
+
 
 #if-shell "[[ $(tmux list-panes | wc -l) -gt 1 ]]" \
 #  'set-hook -g pane-focus-in "selectp -P bg=#252536; run \"sleep 0.1\"; selectp -P bg=default"'
