tmux from scratch

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -7,7 +7,6 @@ set -g status-keys emacs
 set -g focus-events on
 setw -g aggressive-resize on
 # --------------------------------------------------------
-
 #set-option -g status-position top
 
 # Fix vim background color
@@ -20,8 +19,6 @@ set -ga terminal-overrides ",*:smcup@:rmcup@"
 set -g default-terminal "tmux-256color"
 
 
-
-
 # Fix Esc-j and Esc-k swap lines 
 unbind-key -T root M-k
 unbind-key -T root M-j
@@ -32,15 +29,14 @@ bind r source-file ~/.config/tmux/tmux.conf
 bind q kill-pane
 bind Q kill-window
 bind c detach-client
-bind-key  -n M-q kill-pane
-bind-key  -n M-Q kill-window
+bind-key -n M-q kill-pane
+bind-key -n M-Q kill-window
 
 set -s command-alias[50] vsp='split-window -h'
 set -s command-alias[51] sp='split-window '
 set -s command-alias[52] q='kill-session'
 
 set -g mouse on
-
 set -g set-titles on
 set -g set-titles-string "tmux - #S:#W"
 
@@ -120,7 +116,6 @@ bind 8 join-pane -t 8.1
 bind 9 join-pane -t 9.1
 
 bind : command-prompt
-bind-key -n 'M-:' command-prompt
 
 # bind alt-r rename window
 bind-key -n M-r command-prompt -p "rename WINDOW:"  "rename-window '%%'"
@@ -128,9 +123,6 @@ bind-key -n M-R command-prompt -p "rename SESSION:"  "rename-session '%%'"
 
 # Alt+Space -> enter ESC mode
 bind-key -n M-space copy-mode
-
-
-
 
 # Different ways to leave copy mode
 bind-key    -T copy-mode-vi M-space  send-keys -X cancel
@@ -167,101 +159,41 @@ unbind-key -T root MouseDown2Pane
 unbind-key -T root MouseDragEnd1Pane
 set -g set-clipboard external
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'catppuccin/tmux'
-#set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
-set -g @plugin 'z3z1ma/tmux-gruvbox'
-set -g @gruvbox_flavour 'light'
-#set -g @plugin 'tmux-plugins/tmux-resurrect'
-#set -g @plugin 'tmux-plugins/tmux-continuum'
-#set -g @continuum-restore 'on'
-set -g @plugin 'tmux-plugins/tmux-open'
-
-#set -g @open 'x'
-#set -g @open 'M-x'
-unbind x
-set -g @open-editor 'x'
-
-
-
-# Set background for the status bar
-#set -g @catppuccin_window_right_separator "#[fg=#313244,bg=#181825]█ "
-#set -g @catppuccin_status_left_separator "█"
-#set -g @catppuccin_status_left_separator "#[bg=#181825] █" 
-#set -g @catppuccin_window_current_fill "number"
-
-set -g @gruvbox_window_right_separator "█"
-set -g @gruvbox_status_left_separator "█"
-set -g @gruvbox_status_left_separator "█" 
-set -g @gruvbox_window_current_fill "number"
-
-set -g @gruvbox_status_modules_right "session user host"
-#set -g @catppuccin_directory_text "#{pane_current_path}"
-set -g @gruvbox_window_current_text "#W" 
-set -g @gruvbox_window_default_text "#W" 
-
-set -g @gruvbox_window_current_text "#W"
-set -g @gruvbox_status_left_separator_inverse "no"
-set -g @gruvbox_status_fill "all"
-
-# Set colors for the session selector
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run  '~/.config/tmux/plugins/tpm/tpm'
-
-#set -g pane-border-style fg="#313244"
-#set -g pane-active-border fg="#313244"
-#set -g status-bg "#181825"
-
-# Gruvbox (Latte Adaptation)
-set -g pane-border-style fg="#ebdbb2"        # Latte text
-set -g pane-active-border fg="#ebdbb2"       # Latte text
-set -g status-bg "#e9dbb1"                   # Latte mantle
-
-#set -g mode-style "fg=black,bg=#f4b8e4"
-
-# For the pane highlight on focus (used in the if-shell command)
-set-hook -g after-select-pane "if-shell -F '#{==:#{window_panes},1}' '' 'selectp -P bg=#f2e5bc; run \"sleep 0.1\"; selectp -P bg=default'"
-
-# Style command prompt / dialogs 
-set -g message-style 'bg=#fbf1c7 fg=default' # Latte base
-
-# Change color of selected text 
-set -g mode-style "reverse"
-#set -wg copy-mode-selection-style "reverse"
-
-
-#if-shell "[[ $(tmux list-panes | wc -l) -gt 1 ]]" \
-#  'set-hook -g pane-focus-in "selectp -P bg=#252536; run \"sleep 0.1\"; selectp -P bg=default"'
-
-# TODO ! better than zsh function?
-#set-hook -g client-detached kill-session
-#set-hook -g   client-detached 'run-shell $HOME/.config/tmux/kill-dangling-sessions.sh'
-set-hook -g client-detached "run-shell $HOME/.config/tmux/kill-dangling-sessions.sh"
 
 # Whenever we attach to a "buffer" session:
 # 0. rename session to tmux-<number> with a number in /var/next_tmux_session
 # 1. increment the number in /var/next_tmux_session
 # 1. check if no more "buffer" sessions -> create one named "buffer"
 set-hook -g -t buffer client-attached "run-shell $HOME/.config/tmux/create-buffer-shell.sh"
-#set-hook -g  session-created "run-shell $HOME/.config/tmux/create-buffer-shell.sh"
+set-hook -g client-detached "run-shell $HOME/.config/tmux/kill-dangling-sessions.sh"
 
-# Gruvbox Light custom darker backgrounds
-set -g @thm_blue '#076678'
-set -g @thm_orange '#af3a03'
+# ============================================================================
+# PLUGINS
+# ============================================================================
 
-set -g window-status-format "#[bg=#ebdbb2,fg=#076678]#[bg=#076678,fg=#f2e5bc] #I #[bg=#ebdbb2,fg=#076678] #W "
-set -g window-status-current-format "#[bg=#e0cfa9,fg=#af3a03]#[bg=#af3a03,fg=#f2e5bc] #I #[bg=#e0cfa9,fg=#af3a03] #W "
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-super-fingers'
+set -g @plugin 'tmux-plugins/tmux-open'
 
+# Catppuccin configuration
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style 'basic'
 
+# Status configuration
+set -g status-left-length 100
+set -g status-right-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}#{E:@catppuccin_status_session}"
+set -g window-status-separator ""
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
 
+# Open plugin
+unbind x
+set -g @open-editor 'x'
 
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
 
-# set -g detach-on-destroy on
-# tmux set -g detach-on-destroy on
-
-#set -g focus-events on
-#set -g status-left-length 90
-#set -g status-right-length 90
-#set -g status-justify centre
