--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # from: https://github.com/tmux-plugins/tmux-sensible ----
 set -s escape-time 0
-set-option -g display-time 100
+set-option -g display-time 4000
 set -g history-limit 50000
 set -g status-interval 5
 set -g status-keys emacs
@@ -72,6 +72,7 @@ bind M-w select-pane -l
 # Open panel
 bind i split-window -v -c '#{pane_current_path}'
 bind o split-window -h -c '#{pane_current_path}'
+
 
 # Start windows and panes at 1, not 0
 set -g renumber-windows on
@@ -174,8 +175,10 @@ set-hook -g client-detached "run-shell $HOME/.config/tmux/kill-dangling-sessions
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-super-fingers'
-set -g @plugin 'tmux-plugins/tmux-open'
+set -ga update-environment EDITOR
+set -ga update-environment BROWSER
+set -g @plugin './plugins/tmux-fingers-rust"
+
 
 # Catppuccin configuration
 set -g @catppuccin_flavor 'mocha'
