--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -17,6 +17,7 @@ setw -g aggressive-resize on
 #set -ag terminal-overrides ",xterm-256color:Tc"
 set -ga terminal-overrides ",*:smcup@:rmcup@"
 set -g default-terminal "tmux-256color"
+bind f new-window '~/.config/tmux/plugins/tmux-fingers-rust/tmux-fingers.py #{pane_id}'
 
 
 # Fix Esc-j and Esc-k swap lines 
@@ -177,12 +178,45 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 set -ga update-environment EDITOR
 set -ga update-environment BROWSER
-set -g @plugin './plugins/tmux-fingers-rust"
+set -g @plugin './plugins/tmux-fingers-rust'
 
 
 # Catppuccin configuration
-set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_flavor 'latte'
 set -g @catppuccin_window_status_style 'basic'
+
+# Overwrite colors - Gruvbox Light
+set -ogq @thm_bg "#fbf1c7"
+set -ogq @thm_fg "#3c3836"
+
+# Colors - adapted to Gruvbox Light
+set -ogq @thm_rosewater "#d65d0e"
+set -ogq @thm_flamingo "#d65d0e"
+set -ogq @thm_pink "#b16286"
+set -ogq @thm_mauve "#b16286"
+set -ogq @thm_red "#cc241d"
+set -ogq @thm_maroon "#cc241d"
+set -ogq @thm_peach "#d65d0e"
+set -ogq @thm_yellow "#d79921"
+set -ogq @thm_green "#98971a"
+set -ogq @thm_teal "#689d6a"
+set -ogq @thm_sky "#689d6a"
+set -ogq @thm_sapphire "#458588"
+set -ogq @thm_blue "#458588"
+set -ogq @thm_lavender "#8f3f71"
+
+# Surfaces and overlays
+set -ogq @thm_subtext_1 "#504945"
+set -ogq @thm_subtext_0 "#3c3836"
+set -ogq @thm_overlay_2 "#665c54"
+set -ogq @thm_overlay_1 "#7c6f64"
+set -ogq @thm_overlay_0 "#928374"
+set -ogq @thm_surface_2 "#d5c4a1"
+set -ogq @thm_surface_1 "#ebdbb2"
+set -ogq @thm_surface_0 "#f2e5bc"
+set -ogq @thm_mantle "#f9f5d7"
+set -ogq @thm_crust "#f9f5d7"
+
 
 # Status configuration
 set -g status-left-length 100
@@ -192,6 +226,25 @@ set -g status-right "#{E:@catppuccin_status_application}#{E:@catppuccin_status_s
 set -g window-status-separator ""
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
+
+
+
+
+# Pane borders and status bg
+set -g pane-border-style fg="#ebdbb2"        
+set -g pane-active-border fg="#ebdbb2"       
+set -g status-bg "#e9dbb1"                   
+set -g message-style 'bg=#fbf1c7 fg=default' 
+set -g mode-style "reverse"
+
+set -g @catppuccin_window_default_text " #W" 
+set -g @catppuccin_window_current_text " #W"
+
+
+set -g status-right "#{E:@catppuccin_status_session}"
+set -agF status-right "#{E:@catppuccin_status_host}"
+set -agF status-right "#{@catppuccin_status_user}"
+
 
 # Open plugin
 unbind x
